--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,15 +35,18 @@
                         <li class="nav-item">
                             <a class="nav-link nav-link-2" href="#">Historie</a>
                         </li>
-                        <li class="nav-item dropdown nav-item-right">
-                            <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown"
+                        <li class="nav-item">
+                            <a class="nav-link nav-link-2" href="#section-Reisen">Reisen</a>
+                        </li>
+                        <!-- <li class="nav-item dropdown nav-item-right">
+                            <a class="nav-link dropdown-toggle" href="#section-Reisen" data-bs-toggle="dropdown"
                                 aria-expanded="false">Reisen</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="reisen">Nizza 2017</a></li>
                                 <li><a class="dropdown-item" href="#">Dublin 2018</a></li>
                                 <li><a class="dropdown-item" href="#">Albanien 2019</a></li>
                             </ul>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -153,6 +156,10 @@
     </section>
 
     <section id="section-Reisen">
+        <div class="push-right">
+            <h1 class="vereinsname push-right">Boyz<br> n-the <br> Hood</h1>
+
+        </div>
         <div class="container-Reisen">
             <div class="c-mouse-vertical-carousel js-carousel u-media-wrapper u-media-wrapper--16-9">
                 <ul class="c-mouse-vertical-carousel__list js-carousel-list">
@@ -181,7 +188,8 @@
                             </p>
 
                             <p class="c-mouse-vertical-carousel__title u-a5">
-                                Dublin <span class="c-span-small"> und Gallwick</span>
+                                Dublin <br>
+                                <span class="c-span-small"> und Gallwick</span>
                             </p>
                         </a>
                     </li>
@@ -196,19 +204,67 @@
                             </p>
 
                             <p class="c-mouse-vertical-carousel__title u-a5">
-                                Tirana <span class="c-span-small">und mehr</span>
+                                Tirana <br>
+                                <span class="c-span-small">und mehr</span>
+                            </p>
+                        </a>
+                    </li>
+
+                    <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="3">
+                        <a href="">
+                            <p class="c-mouse-vertical-carousel__eyebrow u-b4">
+                                <span>
+                                    2020
+                                </span> Schweiz/Italien
+                            </p>
+
+                            <p class="c-mouse-vertical-carousel__title u-a5">
+                                Tessin <br> <span class="c-span-small">und Alassio</span>
+                            </p>
+                        </a>
+                    </li>
+
+                    <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="4">
+                        <a href="">
+                            <p class="c-mouse-vertical-carousel__eyebrow u-b4">
+                                <span>
+                                    2021
+                                </span> Kroatien
+                            </p>
+
+                            <p class="c-mouse-vertical-carousel__title u-a5">
+                                Split
+                            </p>
+                        </a>
+                    </li>
+
+                    <li class="c-mouse-vertical-carousel__list-item js-carousel-list-item" data-item-id="5">
+                        <a href="">
+                            <p class="c-mouse-vertical-carousel__eyebrow u-b4">
+                                <span>
+                                    2022
+                                </span> Österreich
+                            </p>
+
+                            <p class="c-mouse-vertical-carousel__title u-a5">
+                                Kitzbühl
                             </p>
                         </a>
                     </li>
 
                 </ul>
 
-                <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-                    style='background-image: url("/images/Reisen/2017_Nizza/thumbnail.jpeg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
+                <i id="img-nizza" class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"></i>
                 <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
                     style='background-image: url("/images/Reisen/2018_Dublin/thumbnail.jpeg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
                 <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
-                    style='background-image: url("/images/Reisen/2017_Nizza/thumbnail.jpeg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
+                    style='background-image: url("/images/Reisen/2019_Albanien/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
+                <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
+                    style='background-image: url("/images/Reisen/2020_Schweiz/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
+                <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
+                    style='background-image: url("/images/Reisen/2021_Kroatien/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
+                <i class="c-mouse-vertical-carousel__bg-img js-carousel-bg-img"
+                    style='background-image: url("/images/Reisen/2022_Österreich/thumbnail.jpg"); visibility: hidden; opacity: 0; transform: matrix(1.05, 0, 0, 1.05, 0, 0);'></i>
                 <i class="c-gradient-overlay"></i>
             </div>
         </div>
