--- a/views/index.ejs
+++ b/views/index.ejs
@@ -97,8 +97,8 @@
                                         <div class="name">Sebastian<br> Ghanbari</div>
                                         <p class="zitat">"I gfrier's naus"</p>
                                         <p class="bio">
-                                            Der Puls jedes Abends, das Salz des Meeres, schlicht: ein einmaliger
-                                            Tausendsassa.
+                                            Der Puls jedes Abends, das Salz des Meeres, schlicht: ein
+                                            Tausendsassa und der beste <span class="bold">Reserveposten</span> der Welt.
                                         </p>
                                     </div>
                                 </div>
@@ -110,11 +110,11 @@
                                 </div>
                                 <div class="back">
                                     <div>
-                                        <div class="name">Manuel Rondelli</div>
+                                        <div class="name">Manuel<br> Rondelli</div>
                                         <p class="zitat">"Ich les leer!"</p>
                                         <p class="bio">
-                                            Unser Präsident, Fels in der Brandung und nicht zuletzt der <a
-                                                href="https://www.youtube.com/watch?v=9lmQidSrgPw"
+                                            Unser <span class="bold">Präsident</span>, Fels in der Brandung und nicht
+                                            zuletzt der <a href="https://www.youtube.com/watch?v=9lmQidSrgPw"
                                                 target="_blank">Wellengott</a> persönlich.
                                         </p>
                                     </div>
@@ -127,11 +127,44 @@
                                 </div>
                                 <div class="back">
                                     <div>
-                                        <div class="name">Jakob Timmermann</div>
+                                        <div class="name">Jakob<br> Timmermann</div>
                                         <p class="zitat">"Alle vier unsicher!"</p>
                                         <p class="bio">
-                                            Wann schon hat die Welt einen Protokollanten schon jemals so ausschweifend
+                                            Wann schon hat die Welt einen <span class="bold">Protokollant</span> schon
+                                            jemals so ausschweifend
                                             tanzen gesehen?
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card">
+                                <div class="front" style="background-image: url('/images/Sevi.jpg');">
+                                </div>
+                                <div class="back">
+                                    <div>
+                                        <div class="name">Severin<br> Merget</div>
+                                        <p class="zitat">"Jetzad!"</p>
+                                        <p class="bio">
+                                            Als Bergkatze unerreicht, an Coolness unübertroffen und der einzige <span
+                                                class="bold">Sportwart</span> den wir brauchen.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="card">
+                                <div class="front" style="background-image: url('/images/Lenz.jpg');">
+                                </div>
+                                <div class="back">
+                                    <div>
+                                        <div class="name">Lorenz<br> Schiegerl</div>
+                                        <p class="zitat">""</p>
+                                        <p class="bio">
+                                            Ob als Skatelegende oder als <span class="bold">Kassenwart</span>, das Motto
+                                            bleibt: alles raus!
                                         </p>
                                     </div>
                                 </div>
