--- a/public/css/reisen-styles.css
+++ b/public/css/reisen-styles.css
@@ -28,12 +28,12 @@
 }
 
 .u-a5 {
-	font-size: 37px;
+	font-size: 30px;
 	line-height: 35px;
 	letter-spacing: 5px;
 	text-transform: uppercase;
-	font-weight: 700;
-	text-shadow: 0 0 3px white; 
+	font-weight: 900;
+	text-shadow: 1px 1px 6px white; 
 	color: #0F6292;
 }
 
@@ -41,7 +41,7 @@
 	font-size: 12px;
 	line-height: 17px;
 	letter-spacing: 0.3px;
-	font-weight: normal;
+	font-weight: 600;
 	text-shadow: 0 0 3px white; 
 	color: #0F6292;
 }
@@ -65,7 +65,7 @@
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	background-image: radial-gradient(circle at 49% 50%, rgba(246, 246, 240, 0.3), rgba(236, 230, 147, 0.1));
 }
 
@@ -84,17 +84,17 @@
 
 .c-mouse-vertical-carousel__list-item a {
 	display: block;
-	padding-bottom: 25px;
-	padding-top: 25px;
+	padding-bottom: 20px;
+	padding-top: 20px;
 	padding-right: 66.1666666667%;
 	padding-left: 10%;
 }
 
 .c-mouse-vertical-carousel__eyebrow {
 	position: relative;
-	padding-bottom: 12px;
+	padding-bottom: 8px;
 	padding-top: 3px;
-	font-size: 22px;
+	font-size: 17px;
 }
 
 .c-mouse-vertical-carousel__eyebrow span {
@@ -112,14 +112,14 @@
 	top: 0;
 	left: 0px;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	background-size: cover;
 	background-position: center;
 	will-change: transform;
 }
 
 .c-span-small {
-	font-size: 15px;
+	font-size: 12px;
 }
 
 #img-nizza {
