--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,63 +4,51 @@
 <head>
     <title>BntH</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600,700,800,900&amp;display=swap"
+        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <!-- aos library https://michalsnik.github.io/aos/ -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/reisen-styles.css">
 
 <body>
-
-    <header role="banner">
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+    <header>
+        <nav class="navbar navbar-expand-sm justify-content-center" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="index.html">Brand</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample05"
-                    aria-controls="navbarsExample05" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarsExample11" expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarsExample05">
-                    <ul class="navbar-nav ml-auto pl-lg-5 pl-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="index.html">Home</a>
+
+                <div class="collapse navbar-collapse justify-content-center d-lg-flex">
+                    <ul class="navbar-nav justify-content-lg-center">
+                        <li class="nav-item nav-item-left">
+                            <a class="nav-link " href="#section-Verein">Verein</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Recipes</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown"
-                                aria-haspopup="true" aria-expanded="false">Services</a>
-                            <div class="dropdown-menu" aria-labelledby="dropdown04">
-                                <a class="dropdown-item" href="#">Food Catering</a>
-                                <a class="dropdown-item" href="#">Drink &amp; Beverages</a>
-                                <a class="dropdown-item" href="#">Wedding &amp; Birthday</a>
-                            </div>
+                            <a class="nav-link nav-link-1" href="#section-Mitglieder">Mitglieder</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link nav-link-2" href="#">Historie</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">News</a>
+                            <a class="nav-link nav-link-2" href="#section-Reisen">Reisen</a>
                         </li>
-                    </ul>
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item cta-btn">
-                            <a class="nav-link" href="#">Contact Us</a>
-                        </li>
+                        <!-- <li class="nav-item dropdown nav-item-right">
+                            <a class="nav-link dropdown-toggle" href="#section-Reisen" data-bs-toggle="dropdown"
+                                aria-expanded="false">Reisen</a>
+                            <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" href="reisen">Nizza 2017</a></li>
+                                <li><a class="dropdown-item" href="#">Dublin 2018</a></li>
+                                <li><a class="dropdown-item" href="#">Albanien 2019</a></li>
+                            </ul>
+                        </li> -->
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-
-    <div class="hero" style="background-image: url('images/hero_1.jpg');"></div>
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    <script src="js/main.js"></script>
-    <script defer=""
-        src="https://static.cloudflareinsights.com/beacon.min.js/v52afc6f149f6479b8c77fa569edb01181681764108816"
-        integrity="sha512-jGCTpDpBAYDGNYR5ztKt4BQPGef1P0giN6ZGVUi835kFF88FOmmn8jBQWNgrNd8g/Yu421NdgWhwQoaOPFflDw=="
-        data-cf-beacon="{&quot;rayId&quot;:&quot;7c9ebfbb9a2b3803&quot;,&quot;token&quot;:&quot;cd0b4b3a733644fc843ef0b185f98241&quot;,&quot;version&quot;:&quot;2023.4.0&quot;,&quot;si&quot;:100}"
-        crossorigin="anonymous"></script>
