--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,113 +26,8 @@
 </section>
 
 
-<section id="section-Mitglieder">
-    <div class="mitglieder-background">
-    </div>
-    <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
-
-    <div class="grid-container-Mitglieder">
-        <div class="carousel-container">
-            <div id="carouselExample" class="carousel slide carousel-dark">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="card">
-                            <!-- ToDo Scale Bastis Image-->
-                            <div class="front" style="background-image: url('/images/Basti.jpg');">
-                            </div>
-                            <div class="back">
-                                <div>
-                                    <div class="name">Sebastian<br> Ghanbari</div>
-                                    <p class="zitat">"I gfrier's naus"</p>
-                                    <p class="bio">
-                                        Der Puls jedes Abends, das Salz des Meeres, schlicht: ein
-                                        Tausendsassa und der beste <span class="bold">Reserveposten</span> der Welt.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card">
-                            <div class="front" style="background-image: url('/images/Manu.jpg');">
-                            </div>
-                            <div class="back">
-                                <div>
-                                    <div class="name">Manuel<br> Rondelli</div>
-                                    <p class="zitat">"Ich les leer!"</p>
-                                    <p class="bio">
-                                        Unser <span class="bold">Präsident</span>, Fels in der Brandung und nicht
-                                        zuletzt der <a href="https://www.youtube.com/watch?v=9lmQidSrgPw"
-                                            target="_blank">Wellengott</a> persönlich.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card">
-                            <div class="front" style="background-image: url('/images/Jakob.jpg');">
-                            </div>
-                            <div class="back">
-                                <div>
-                                    <div class="name">Jakob<br> Timmermann</div>
-                                    <p class="zitat">"Alle vier unsicher!"</p>
-                                    <p class="bio">
-                                        Wann schon hat die Welt einen <span class="bold">Protokollant</span> schon
-                                        jemals so ausschweifend
-                                        tanzen gesehen?
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card">
-                            <div class="front" style="background-image: url('/images/Sevi.jpg');">
-                            </div>
-                            <div class="back">
-                                <div>
-                                    <div class="name">Severin<br> Merget</div>
-                                    <p class="zitat">"Jetzad!"</p>
-                                    <p class="bio">
-                                        Als Bergkatze unerreicht, an Coolness unübertroffen und der einzige <span
-                                            class="bold">Sportwart</span> den wir brauchen.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="card">
-                            <div class="front" style="background-image: url('/images/Lenz.jpg');">
-                            </div>
-                            <div class="back">
-                                <div>
-                                    <div class="name">Lorenz<br> Schiegerl</div>
-                                    <p class="zitat">""</p>
-                                    <p class="bio">
-                                        Ob als Skatelegende oder als <span class="bold">Kassenwart</span>, das Motto
-                                        bleibt: alles raus!
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-            </div>
-
-        </div>
-    </div>
+<section class="carousel" id="section-Mitglieder"></section>
+<%- include("partials/members") %>
 
 </section>
 
@@ -253,7 +148,11 @@
         </div>
     </div>
 
-
 </section>
 
+<section id="last">
+    <div class="mitglieder-background">
+    </div>
+    <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
+</section>
 <%- include("partials/footer") %>
