--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -12,9 +12,13 @@
 <script src="/js/navbarScrolling.js"></script>
 <script src="/js/ownScripts.js"></script>
 
+<!-- scripts required for Mitglieder section -->
+<script src="/js/mitgliederScripts.js"></script>
+
 <!-- scripts required for reise section -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="/js/reiseScript.js"></script>
+
 </body>
 
 
