Modify Mitlgieder Introduction

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 <div class="hero">
     <h1 class="vereinsname">Boyz<br> n-the <br> Hood</h1>
 </div>
-
+<!-- 
 <section id="section-Verein">
     <div class="grid-container-Verein">
         <div class="Vereinsmotto">
@@ -23,11 +23,14 @@
         <div class="logo-background">
         </div>
     </div>
-</section>
+</section> -->
 
 
-<section class="carousel" id="section-Mitglieder"></section>
-<%- include("partials/members") %>
+<section id="section-Mitglieder">
+        <div class="logo-background">
+        </div>
+
+    <%- include("partials/members") %>
 
 </section>
 
