--- a/views/partials/members.ejs
+++ b/views/partials/members.ejs
@@ -42,7 +42,7 @@
                 <div class="carousel__image"><img src="images/Manu.jpg" width="1000" height="1000"></div>
                 <div class="carousel__contents">
                     <h2 class="user__name">Manuel Rondelli</h2>
-                    <h3 class="user__title">Präsident und Wellengott</h3>
+                    <h3 class="user__title">Unser Präsident und Wellengott</h3>
                 </div>
             </div>
         </li>
