--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -127,11 +127,12 @@ header {
 
 .push-right {
 	display: flex;
-	justify-content: right;	
+	justify-content: right;
 	text-align: right !important;
 	margin-left: 0px !important;
 	margin-right: 2rem;
 }
+
 /* header .navbar-brand.absolute {
 	position: absolute;
 } */
@@ -428,18 +429,6 @@ header .navbar .cta-btn a:hover {
 
 /* Mitglieder Flipcard */
 
-.card {
-	display: flex;
-	align-items: center;
-	color: inherit;
-	cursor: pointer;
-	width: 66%;
-	height: 70vh;
-	perspective: 1000px;
-	margin: auto;
-	position: relative
-}
-
 /* @media screen and (max-width: 800px) {
 	.card {
 		width: calc(50% - 3rem);
@@ -458,9 +447,6 @@ header .navbar .cta-btn a:hover {
 	border-radius: 6px;
 	background-position: center;
 	background-size: cover;
-	text-align: center;
-	justify-content: center;
-	align-items: center;
 	position: absolute;
 	height: 100%;
 	width: 100%;
@@ -468,6 +454,12 @@ header .navbar .cta-btn a:hover {
 	backface-visibility: hidden;
 	transform-style: preserve-3d;
 	transition: ease-in-out 600ms;
+}
+
+.back {
+	text-align: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .front {
