--- a/views/partials/members.ejs
+++ b/views/partials/members.ejs
@@ -1,30 +1,13 @@
 <div>
- <img src="images/logo-bw.png" class="demo-bg">
+    <img src="images/logo-bw.png" class="demo-bg">
     <ul class="carousel__list">
-        <li class="carousel__item" tabindex="0">
-            <div class="carousel__box">
-                <div class="carousel__image"><img src="images/Basti.jpg" width="480" height="720"></div>
-                <div class="carousel__contents">
-                    <h2 class="user__name">Sebastian Ghanbari</h2>
-                    <h3 class="user__title">Reserveposten und Tausendsassa</h3>
-                </div>
-            </div>
-        </li>
+
         <li class="carousel__item" tabindex="0">
             <div class="carousel__box">
                 <div class="carousel__image"><img src="images/Lenz.jpg" width="480" height="720"></div>
                 <div class="carousel__contents">
                     <h2 class="user__name">Lorenz Schiegerl</h2>
                     <h3 class="user__title">Kassenwart und Skatelegende</h3>
-                </div>
-            </div>
-        </li>
-        <li class="carousel__item" tabindex="0" data-active="true">
-            <div class="carousel__box">
-                <div class="carousel__image"><img src="images/Jakob.jpg" width="480" height="720"></div>
-                <div class="carousel__contents">
-                    <h2 class="user__name">Jakob Timmerman</h2>
-                    <h3 class="user__title">Protokollant und Universalgenie</h3>
                 </div>
             </div>
         </li>
@@ -37,15 +20,48 @@
                 </div>
             </div>
         </li>
-        <li class="carousel__item" tabindex="0">
-            <div class="carousel__box">
-                <div class="carousel__image"><img src="images/Manu.jpg" width="1000" height="1000"></div>
-                <div class="carousel__contents">
-                    <h2 class="user__name">Manuel Rondelli</h2>
-                    <h3 class="user__title">Unser Präsident und Wellengott</h3>
+        <li class="carousel__item" tabindex="0" data-active="true">
+            <div class="card">
+                <div class="front">
+                    <div class="carousel__box">
+                        <div class="carousel__image"><img src="images/Manu.jpg" width="998" height="1000"></div>
+                        <div class="carousel__contents">
+                            <h2 class="user__name">Manuel Rondelli</h2>
+                            <h3 class="user__title">Unser Präsident und Wellengott</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="back">
+                    <div>
+                        <div class="name">Severin<br> Merget</div>
+                        <p class="zitat">"Jetzad!"</p>
+                        <p class="bio">
+                            Als Bergkatze unerreicht, an Coolness unübertroffen und der einzige <span
+                                class="bold">Sportwart</span> den wir brauchen.
+                        </p>
+                    </div>
                 </div>
             </div>
         </li>
+        <li class="carousel__item" tabindex="0">
+            <div class="carousel__box">
+                <div class="carousel__image"><img src="images/Jakob.jpg" width="480" height="720"></div>
+                <div class="carousel__contents">
+                    <h2 class="user__name">Jakob Timmerman</h2>
+                    <h3 class="user__title">Protokollant und Universalgenie</h3>
+                </div>
+            </div>
+        </li>
+        <li class="carousel__item" tabindex="0">
+            <div class="carousel__box">
+                <div class="carousel__image"><img src="images/Basti.jpg" width="480" height="720"></div>
+                <div class="carousel__contents">
+                    <h2 class="user__name">Sebastian Ghanbari</h2>
+                    <h3 class="user__title">Reserveposten und Tausendsassa</h3>
+                </div>
+            </div>
+        </li>
+
 
     </ul>
 </div>
