--- a/public/css/mitglieder-styles.css
+++ b/public/css/mitglieder-styles.css
@@ -1,5 +1,5 @@
 :root {
-    --height: calc( 80vh - 20px );
+    --height: calc(80vh - 20px);
     --width: 28vw;
 }
 
@@ -8,10 +8,9 @@
     display: flex;
     overflow: hidden;
     list-style: none;
-    padding: 4em 0 3em;
+    padding: 4rem 0 3rem;
     margin: 0;
     contain: layout;
-    
 }
 
 .carousel__item {
@@ -23,10 +22,12 @@
     flex: 1 1 10%;
     height: var(--height);
     overflow: hidden;
-    background: rgba(255,255,255,0.2);
+    background: rgba(255, 255, 255, 0.2);
     border-radius: 16px;
-    transform: translate3d(0,0,0.1px);
-    box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 15px 2px, rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
+    transform: translate3d(0, 0, 0.1px);
+    box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 15px 2px,
+        rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px,
+        rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
     contain: layout;
     isolation: isolate;
     outline: none !important;
@@ -34,7 +35,7 @@
 
 .carousel__item,
 .carousel__item * {
-    transition: all .6s cubic-bezier(.55,.24,.18,1);
+    transition: all 0.6s cubic-bezier(0.55, 0.24, 0.18, 1);
     user-select: none;
 }
 
@@ -45,7 +46,7 @@
 }
 
 .carousel__item:hover {
-    flex-basis: calc( var(--width) / 2 );
+    flex-basis: calc(var(--width) / 2);
     transition: all 0.3s ease;
 }
 
@@ -61,14 +62,13 @@
 }
 
 @media screen and (max-width: 600px) {
-    
     .carousel__item {
         flex-basis: 10%;
         margin: 0 5px;
         border-radius: 8px;
         font-size: 3vw;
     }
-    
+
     .carousel__item[data-active] {
         flex-basis: 45%;
         flex-grow: 0;
@@ -89,28 +89,26 @@
         transform: translateX(50px);
     }
 
-    .carousel__item:nth-child( 1 ),
-    .carousel__item:nth-child( n + 9 ) {
+    .carousel__item:nth-child(1),
+    .carousel__item:nth-child(n + 9) {
         flex: 0 0 0px;
         margin: 0;
         box-shadow: none;
-        opacity: 0!important;
+        opacity: 0 !important;
     }
 
-    .carousel__item:not(:nth-child( n + 5 )) img,
-    .carousel__item:nth-child( n + 7 ) img {
+    .carousel__item:not(:nth-child(n + 5)) img,
+    .carousel__item:nth-child(n + 7) img {
         opacity: 0.8;
     }
 
-    .carousel__item:not(:nth-child( n + 4 )) *,
-    .carousel__item:nth-child( n + 7 ) * {
-        opacity: 0!important;
+    .carousel__item:not(:nth-child(n + 4)) *,
+    .carousel__item:nth-child(n + 7) * {
+        opacity: 0 !important;
     }
-    
 }
 
 @media screen and (min-width: 600px) {
-
     /* .carousel__item:nth-child(2),
     .carousel__item:nth-child(11) {
         flex: 0 0 10px;
@@ -168,8 +166,13 @@
     height: 100%;
     z-index: 1;
     opacity: 1;
-	background: linear-gradient(160deg, rgba(26, 155, 230, 0.01) 40% , rgb(237, 228, 91, 0.3) 70%, rgb(15, 98, 146, 0.6) 100%);
-    transition: all .66s cubic-bezier(.55,.24,.18,1);
+    background: linear-gradient(
+        160deg,
+        rgba(26, 155, 230, 0.01) 40%,
+        rgb(237, 228, 91, 0.3) 70%,
+        rgb(15, 98, 146, 0.6) 100%
+    );
+    transition: all 0.66s cubic-bezier(0.55, 0.24, 0.18, 1);
 }
 
 .carousel__item[data-active]::after {
@@ -187,9 +190,13 @@
     flex-direction: column-reverse;
     justify-content: start;
     min-height: 200px;
-    padding: 1em;
+    padding: 1rem;
     z-index: 2;
-    background-image: radial-gradient( ellipse at 0px 0px, rgba(15,98,146,0.4) 20%, transparent 50% );
+    background-image: radial-gradient(
+        ellipse at 0px 0px,
+        rgba(15, 98, 146, 0.4) 20%,
+        transparent 50%
+    );
     background-size: 170% 200px;
     background-repeat: no-repeat;
     position: absolute;
@@ -199,20 +206,20 @@
 
 .carousel__contents .user__name {
     color: #e8eff4;
-    font-size: 1.75em;
+    font-size: 1.75rem;
     font-weight: 600;
-    letter-spacing: .8px;
-    text-shadow: 0 1px 0 rgba(0,0,0,0.3);
+    letter-spacing: 0.8px;
+    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.3);
 }
 
 .carousel__contents .user__title {
-    font-size: .875em;
+    font-size: 0.875rem;
     letter-spacing: 1.25px;
     font-weight: 600;
     text-transform: uppercase;
     color: transparent;
-    background: linear-gradient( 270deg, rgb(67, 255, 0), rgb(0, 255, 247) );
-    background: linear-gradient( 270deg, #FFED00, #abd055 );
+    background: linear-gradient(270deg, rgb(67, 255, 0), rgb(0, 255, 247));
+    background: linear-gradient(270deg, #ffed00, #abd055);
     background-clip: text;
     -webkit-background-clip: text;
     opacity: 0.85;
@@ -232,14 +239,19 @@
 
 @media screen and (max-width: 800px) {
     .carousel__item img {
-        width: calc(var(--width) * .5);
+        width: calc(var(--width) * 0.5);
     }
+
     .carousel__contents {
         transform: translateX(-100%) rotate(90deg);
         transform-origin: bottom right;
         align-items: end;
         justify-content: end;
-        background-image: radial-gradient( ellipse at 100% 100%, rgba(0, 0, 0,.4) 0%, transparent 50% );
+        background-image: radial-gradient(
+            ellipse at 100% 100%,
+            rgba(0, 0, 0, 0.4) 0%,
+            transparent 50%
+        );
         background-position: -100% 100%;
         flex-direction: column;
         position: absolute;
@@ -247,9 +259,11 @@
         left: 0;
         text-align: right;
     }
+
     [data-active] .carousel__contents {
         background-position: 100% 100%;
     }
+
     .carousel__contents .user__title,
     .carousel__contents .user__name {
         max-width: 70vh;
@@ -258,35 +272,16 @@
 }
 
 [data-active] .carousel__contents * {
-    transform: translateX(0px); 
+    transform: translateX(0px);
     transition-duration: 0.66s;
     opacity: 1;
 }
+
 [data-active] .carousel__contents .user__name {
     transition-delay: 0.1s;
 }
+
 [data-active] .carousel__contents .user__title {
-    opacity: 0.85; 
+    opacity: 0.85;
     transition-delay: 0.05s;
-}
-
-
-.demo-bg {
-  opacity: 0.2;
-  position:absolute;
-  left: 0;
-  top: 100vh;
-  width: 100%;
-  height: auto;
-  z-index: -1000;
-}
-
-
-/* Flipcard Fiddling */
-.card {
-	display: flex;
-	color: inherit;
-	cursor: pointer;
-	width: var(--width); 
-	height: var(--height);
 }
