--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="/css/mitglieder-styles.css">
     <link rel="stylesheet" href="/css/reisen-styles.css">
+    <link rel="stylesheet" href="/css/flipcard-styles.css">
 
 <body>
     <header>
