--- a/views/partials/members.ejs
+++ b/views/partials/members.ejs
@@ -3,11 +3,34 @@
     <ul class="carousel__list">
 
         <li class="carousel__item" tabindex="0">
-            <div class="carousel__box">
-                <div class="carousel__image"><img src="images/Lenz.jpg" width="480" height="720"></div>
-                <div class="carousel__contents">
-                    <h2 class="user__name">Lorenz Schiegerl</h2>
-                    <h3 class="user__title">Kassenwart und Skatelegende</h3>
+            <div class="cardContainer inactive">
+                <div class="card">
+                    <div class="side front">
+                        <div class="carousel__box">
+                            <div class="carousel__image"><img src="images/Lenz.jpg" width="480" height="720"></div>
+                            <div class="carousel__contents">
+                                <h2 class="mitglieder__name">Lorenz Schiegerl</h2>
+                                <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="side back">
+                        <h2 class="mitglieder__name">Lorenz Schiegerl</h2>
+                        <h3 class="mitglieder__titel">Kassenwart und Skatelegende</h3>
+                        <p class="mitglieder__zitat">""</p>
+                        <p class="mitglieder__bio">
+                            Ob als Skatelegende oder als <span class="bold">Kassenwart</span>, das Motto
+                            bleibt: Immer alles (aus)geben!
+                        </p>
+                        <!-- <div class="btn">
+                            <h4>Learn More</h4>
+                            <svg fill="#333" height="24" viewBox="0 0 24 24" width="24"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path d="M8.59 16.34l4.58-4.59-4.58-4.59L10 5.75l6 6-6 6z" />
+                                <path d="M0-.25h24v24H0z" fill="none" />
+                            </svg>
+                        </div> -->
+                    </div>
                 </div>
             </div>
         </li>
@@ -15,29 +38,51 @@
             <div class="carousel__box">
                 <div class="carousel__image"><img src="images/Sevi.jpg" width="480" height="720"></div>
                 <div class="carousel__contents">
-                    <h2 class="user__name">Severin Merget</h2>
-                    <h3 class="user__title">Minister für Sport und Coolness</h3>
+                    <h2 class="mitglieder__name">Severin Merget</h2>
+                    <h3 class="mitglieder__titel">Minister für Sport und Coolness</h3>
                 </div>
             </div>
         </li>
         <li class="carousel__item" tabindex="0" data-active="true">
-            <div class="card">
-                <div class="front">
-                    <div class="carousel__box">
-                        <div class="carousel__image"><img src="images/Manu.jpg" width="998" height="1000"></div>
-                        <div class="carousel__contents">
-                            <h2 class="user__name">Manuel Rondelli</h2>
-                            <h3 class="user__title">Unser Präsident und Wellengott</h3>
+            <div class="carousel__box">
+                <div class="carousel__image"><img src="images/Manu.jpg" width="998" height="1000"></div>
+                <div class="carousel__contents">
+                    <h2 class="mitglieder__name">Manuel Rondelli</h2>
+                    <h3 class="mitglieder__titel">Unser Präsident und Wellengott</h3>
+                </div>
+            </div>
+            <!-- <div class="back">
+                <div>
+                    <div class=""><img src="images/Manu.jpg" width="998" height="1000"></div>
+                    <div class="name">Manuel<br> Rondelli</div>
+                    <p class="mitglieder__zitat">"I les leer!"</p>
+                    <p class="bio">
+                        Unser <span class="bold">Präsident</span>, Fels in der Brandung und nicht
+                        zuletzt der <a href="https://www.youtube.com/watch?v=9lmQidSrgPw" target="_blank">Wellengott</a>
+                        persönlich.
+                    </p>
+                </div>
+            </div> -->
+        </li>
+        <li class="carousel__item" tabindex="0">
+            <div class="cardContainer inactive">
+                <div class="card">
+                    <div class="side front">
+                        <div class="carousel__box">
+                            <div class="carousel__image"><img src="images/Jakob.jpg" width="480" height="720"></div>
+                            <div class="carousel__contents">
+                                <h2 class="mitglieder__name">Jakob Timmerman</h2>
+                                <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="back">
-                    <div>
-                        <div class="name">Severin<br> Merget</div>
-                        <p class="zitat">"Jetzad!"</p>
-                        <p class="bio">
-                            Als Bergkatze unerreicht, an Coolness unübertroffen und der einzige <span
-                                class="bold">Sportwart</span> den wir brauchen.
+                    <div class="side back">
+                        <h2 class="mitglieder__name">Jakob Timmerman</h2>
+                        <h3 class="mitglieder__titel">Protokollant und Universalgenie</h3>
+                        <p class="mitglieder__zitat">"Der nasse Hase ist das geölte Kalb der Tiere."</p>
+                        <p class="mitglieder__bio">
+                            Keiner vereint Gegensätze so leichthändig wie unser <span class="bold">Protokollant</span> und selbsternanntes Universalgenie. <br>
+                            Und nur schwerlich findet man einen besseren Freund.
                         </p>
                     </div>
                 </div>
@@ -45,19 +90,10 @@
         </li>
         <li class="carousel__item" tabindex="0">
             <div class="carousel__box">
-                <div class="carousel__image"><img src="images/Jakob.jpg" width="480" height="720"></div>
-                <div class="carousel__contents">
-                    <h2 class="user__name">Jakob Timmerman</h2>
-                    <h3 class="user__title">Protokollant und Universalgenie</h3>
-                </div>
-            </div>
-        </li>
-        <li class="carousel__item" tabindex="0">
-            <div class="carousel__box">
                 <div class="carousel__image"><img src="images/Basti.jpg" width="480" height="720"></div>
                 <div class="carousel__contents">
-                    <h2 class="user__name">Sebastian Ghanbari</h2>
-                    <h3 class="user__title">Reserveposten und Tausendsassa</h3>
+                    <h2 class="mitglieder__name">Sebastian Ghanbari</h2>
+                    <h3 class="mitglieder__titel">Reserveposten und Tausendsassa</h3>
                 </div>
             </div>
         </li>
