--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,10 +14,12 @@
 
 <!-- scripts required for Mitglieder section -->
 <script src="/js/mitgliederScripts.js"></script>
+<script src="/js/flipcardScript.js"></script>
 
 <!-- scripts required for reise section -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
 <script src="/js/reiseScript.js"></script>
+
 
 </body>
 
